add first part of html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+   
     <title>Document</title>
 </head>
 <body>
-    <p>hi</p>
+    <div id="story"></div>
+    <div id="siteFooter">
+        <div id="question"></div>
+        <div id="answer">
+            Enter your answer: 
+            <input type="text" id="yourAnswer"/>
+            <button type="button" id="submit">Go!</button>
+        </div>
+    </div>
     <script src="assets/script.js"></script>
 </body>
 </html>
