Add story part HTML and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +16,12 @@
             <input type="text" id="yourAnswer"/>
             <button type="button" id="submit">Go!</button>
         </div>
+    </div>
+    <div class="storyPart" id="answer01">
+        <p>You are captain of a spaceship names 'The Flying Hippo'. One day, you're working on tuning up your ship's engine when you get an urgent message on your space phone</p>
+        <p>"Captain, one of our Mars robots is sick. We need you to go to Mars immediately and retrieve it so that we can fix it and download the results of its important experiments".</p>
+        <p>You remember that you're supposed to go to a meeting of the Space Scouts tonight, and you were really looking forward to it. But, on the other hand, the other Space Scouts would understand that this mission is very important.</p>
+        <p>What do you do? Go to Mars? or stay home</p>
     </div>
     <script src="assets/script.js"></script>
 </body>
